@@ -86,6 +86,22 @@
   ${EZBIN}/ezmlm-issubn "$DIR" . allow && \
 	fatal "ezmlm-unsub/issubn: failed to remove address"
 
+# test wildcard addresses
+  ${EZBIN}/ezmlm-sub "$DIR" deny @badexample.com || \
+	fatal "ezmlm-sub: failed to add wildcard"
+  SENDER=@badexample.com
+  ${EZBIN}/ezmlm-issubn "$DIR" deny || \
+	fatal "ezmlm-sub/issubn: failed to add wildcard address"
+
+  SENDER=someone@badexample.com
+  ${EZBIN}/ezmlm-issubn "$DIR" deny test@badexample.com || \
+	fatal "ezmlm-sub/issubn: failed to match wildcard address"
+
+  ${EZBIN}/ezmlm-unsub "$DIR" deny @badexample.com || \
+	fatal "ezmlm-unsub: failed to remove wildcard"
+  ${EZBIN}/ezmlm-issubn "$DIR" deny @badexample.com && \
+	fatal "ezmlm-sub/issubn: failed to remove wildcard address"
+
 # clean up
   LOCAL=''
 
